Fixed text spacing on Windows (was too high)

--- a/css/slides.css
+++ b/css/slides.css
@@ -19,6 +19,7 @@ body{
 	font-family: 'Neucha';
 	color: #333;
 	font-size: 22px;
+	line-height: 1.1;
 
 }
 #preloader{
